# metaflow-mcp-server

./: .gitignore  .mcp.json  BLOG_POST.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  RESUME.md  __init__.py  __main__.py  api_docs.py  config.py  discover.py  harness.py  judge.py  merge_results.py  report.py  results.json  results_v21.json  results_v8.json  results_v8.raw.json  run.py  setup_test_data.py  tasks.py
benchmarks/approaches/: __init__.py  base.py  cf_code_mode.py  code_mode.py  mcp_direct.py  skill.py
src/metaflow_mcp_server/: __init__.py  __main__.py  server.py
tests/: test_server.py
