[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-mcp-server"
version = "0.1.7"
description = "MCP server for Metaflow -- expose flow runs, logs, and artifacts as tools for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "metaflow>=2.12.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
benchmark = ["anthropic>=0.50.0", "tabulate>=0.9.0"]

[project.scripts]
metaflow-mcp-server = "metaflow_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]
